--- a/views/sheets/layout.jade
+++ b/views/sheets/layout.jade
@@ -14,13 +14,14 @@ html
             a(href='#' id='changeGame' style='padding: 3px 7px 3px') Change Game
                 span#gameName
             a(href="/") Home
-            a(href="/roller") Roller
+            a(href="/game/roller") Game
             a#sheets_button(href="/sheets") Sheets
             div#sheets_dropdown.hide
                 a(href='/sheets/gurps') Gurps Sheet
                 a(href='/sheets/dnd' style='padding: 3px 7px 3px') D&amp;D Sheet
             a(href="/show") Show
             a(href="#" id="login" style='padding: 3px 7px 3px') Login
+
     div#loginBody.hide.overlay
         section#register_login_container
             section.register
