--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,6 +30,23 @@ body {
   color: #000;
   transition: color 1s ease;
 }
+#game_sub_navigation {
+  width: 940px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #cc5543;
+}
+#game_sub_navigation>a {
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  background-color: none;
+}
+#game_sub_navigation>a:hover {
+  color: #000;
+  transition: color 1s ease;
+}
 #sheets_button {
   position: relative;
 }
