--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -30,6 +30,23 @@ body
     color black
     transition: color 1s ease
     
+#game_sub_navigation
+    width 940px
+    padding 10px
+    margin-left auto 
+    margin-right auto
+    background-color #CC5543
+      
+#game_sub_navigation>a
+    padding 10px
+    color white
+    text-decoration none
+    background-color none
+    
+#game_sub_navigation>a:hover
+    color black
+    transition: color 1s ease
+    
 #sheets_button
     position relative
 
