--- a/views/games/combat.jade
+++ b/views/games/combat.jade
@@ -10,6 +10,8 @@ block content
     script(src="https://code.jquery.com/jquery-3.3.1.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.0.5/redux.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.0.6/react-redux.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js")
     script(src='/javascripts/index.js')
     script(src='/javascripts/react_combat_app.jsx' type='text/babel')
